# Systematic-Options-Auto-Hedging-Engine

./: .gitignore  Makefile  README.md  examples_optimize_policy.py  pyproject.toml
configs/: execution.simulated_lob.yaml  hedging_policy.delta_neutral.yaml  hedging_policy.gamma_scaled.yaml  model.black_scholes.yaml  model.heston.yaml
data/interim/: AAPL_processed_20251001.csv  AMZN_processed_20251001.csv  GOOGL_processed_20251001.csv  MSFT_processed_20251001.csv  TSLA_processed_20251001.csv  eda_summary_20251001.csv
data/processed/: backtest_results_20251001_222458.csv  backtest_results_20251001_231043.csv  cost_analysis_20251001_225328.csv  cost_analysis_20251001_231043.csv  greeks_validation_20251001_213916.csv  hedge_performance_summary_20251001_222458.json  hedge_performance_summary_20251001_225116.json  hedge_performance_summary_20251001_225328.json  hedge_performance_summary_20251001_231043.json  hedge_policy_stats_20251001_225116.csv  optimization_results_20251001_222458.json  optimization_summary_20251001_232806.json
data/raw/: AAPL_raw_20251001.csv  AMZN_raw_20251001.csv  GOOGL_raw_20251001.csv  MSFT_raw_20251001.csv  TSLA_raw_20251001.csv
docker/: Dockerfile  compose.yaml
notebooks/: 01_EDA.ipynb  02_Greek_validation.ipynb  03_Hedge_performance.ipynb
src/: logging_utils.py  runner.py
src/auto_hedging_engine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/cli/: backtest.py  optimize_policy.py
src/execution/: cost_models.py  simulated_lob.py
src/greeks/: heston.py
tests/: test_optimize_policy.py
(+8 files in other folders)
